исправленно после 1ой проверки

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 alt="картинка ноутбука с первой загрузкой"
               />
             </div>
-            <div class="card__description">
+            <div class="card__description border-none">
               <p class="card__text">
                 Это было самое начало пути. На этом этапе важно было
                 проникнуться основами и настроиться на учёбу. И,
@@ -99,10 +99,10 @@
               <img
                 class="card__image filtr-grayscale"
                 src="./images/image(2).jpg"
-                alt="уставшая девушка за ноутбуком"
+                alt="уставшая девушка сидит за ноутбуком"
               />
             </div>
-            <div class="card__description">
+            <div class="card__description border-none">
               <p class="card__text">
                 На первых этапах мы работали со страхами и сомнениями, которые
                 часто испытывают новички. Один из них — страх перед чистым
@@ -166,7 +166,7 @@
               <img
                 class="card__image filtr-hue-rotete"
                 src="./images/image(3).jpg"
-                alt="девушка в прыжке анимация смены цвета"
+                alt="девушка в прыжке"
               />
             </div>
             <div class="card__description">
@@ -296,10 +296,10 @@
               <img
                 class="card__image filtr-invert"
                 src="./images/image(5).png"
-                alt="колаж верстальщика из моих первых вопросов"
+                alt="колаж верстальщика из первых вопросов по верстке"
               />
             </div>
-            <div class="card__description">
+            <div class="card__description border-none">
               <p class="card__text">
                 Всё это время вы были не одиноки (хотя, возможно, иногда и
                 чувствовали, что одни против целого мира). Вас окружали
@@ -431,7 +431,7 @@
                 alt="букет полевых цветов"
               />
             </div>
-            <div class="card__description">
+            <div class="card__description border-none">
               <p class="card__text">
                 Во время учёбы часто возникает чувство, когда не знаешь, за что
                 хвататься. Вроде и проектную пора сдавать, и задачи хочется
@@ -498,7 +498,7 @@
                 alt="фото девушки на фоне парка"
               />
             </div>
-            <div class="card__description">
+            <div class="card__description border-none">
               <p class="card__text">
                 Сейчас вы уже очень много знаете о вёрстке. Но это только
                 начало. Во-первых, впереди ещё много материала про «красотищу».
