--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 alt="картинка ноутбука с первой загрузкой"
               />
             </div>
-            <div class="card__description border-none">
+            <div class="card__description border-none border-nonemob">
               <p class="card__text">
                 Это было самое начало пути. На этом этапе важно было
                 проникнуться основами и настроиться на учёбу. И,
@@ -299,7 +299,7 @@
                 alt="колаж верстальщика из первых вопросов по верстке"
               />
             </div>
-            <div class="card__description border-none">
+            <div class="card__description border-nonemob border-none">
               <p class="card__text">
                 Всё это время вы были не одиноки (хотя, возможно, иногда и
                 чувствовали, что одни против целого мира). Вас окружали
